scss/modules/_table.scss
@use "variables";

table {
  border-collapse: separate;
  border-spacing: 0 0.5em;
  padding: 0 variables.$button-distance;
  width: 100%;

  &.attributes {
    line-height: 1.41em;

    th {
      font-weight: bold;
      padding-right: 1em;
      text-align: left;
      vertical-align: top;
      white-space: nowrap;
    }

    td {
      text-align: left;
      width: 100%;
    }
  }
}

tr {
  &.header {
    font-size: 1.2em;

    th {
      padding-top: 1em;
    }
  }
}

td,
th {
  line-height: 1.41em;
  text-align: right;

  &:first-child {
    text-align: left;
  }
}

th {
  font-weight: bold;

  &[class*=" ion-"] {
    &::before {
      font-size: 1.3em;
    }
  }

  &.sort-header {
    cursor: pointer;

    &::selection {
      background: transparent;
    }

    &::after {
      content: "\f10d";
      font-family: variables.$font-family-icons;
      padding-left: 0.25em;
      visibility: hidden;
    }

    &:hover {
      &::after {
        visibility: visible;
      }
    }
  }

  &.sort-up {
    &::after {
      content: "\f104";
    }
  }

  &.sort-up,
  &.sort-down {
    &::after {
      opacity: 0.4;
      visibility: visible;
    }
  }
}

.tab {
  table {
    table-layout: fixed;
  }
}

